--- a/src/PagoElectronico/PagoElectronico/ABM Rol/Baja.resx
+++ b/src/PagoElectronico/PagoElectronico/ABM Rol/Baja.resx
@@ -126,4 +126,7 @@
   <metadata name="Elimnar.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="textBox_Nombre.Locked" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
 </root>
